welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: missing arguments for method apply in object Array;
follow this method with `_' if you want to treat it as a partially applied function
var T=Array[Color]
           ^